fix hero-image on mobile

--- a/style.css
+++ b/style.css
@@ -77,8 +77,6 @@ a {
   background: url(./assets/img/bg.jpg) fixed center/cover;
   color: white;
   padding: 60px;
-  width: 100%;
-  /*height: 250px;*/
   text-align: center;
 }
 
